make changes in styles

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header class="site-header">
-      <div class="header-container">
+      <div class="header-container container">
         <a class="tbc-academy-logo" href="#" aria-label="Home">
           <img src="assets/images/logo.svg" alt="TBC Academy Logo" />
         </a>
@@ -35,6 +35,9 @@
             </li>
           </ul>
         </nav>
+        <div class="burger-menu">
+          <img src="./assets/images/burger-menu.png" />
+        </div>
       </div>
     </header>
 
@@ -42,9 +45,9 @@
       <section class="banner-container">
         <div class="container">
           <div class="banner-title">
-            <h3>TBC x USAID</h3>
+            <h1>TBC x USAID</h1>
+            <h2>ᲢᲔᲥᲜᲝᲚᲝᲒᲘᲣᲠᲘ ᲒᲐᲜᲐᲗᲚᲔᲑᲘᲡᲗᲕᲘᲡ</h2>
           </div>
-          <span>ᲢᲔᲥᲜᲝᲚᲝᲒᲘᲣᲠᲘ ᲒᲐᲜᲐᲗᲚᲔᲑᲘᲡᲗᲕᲘᲡ</span>
         </div>
       </section>
       <section class="information-container">
@@ -57,9 +60,9 @@
               სხვადასხვა ICT მიმართულებით. წარმატებულ კურსდამთავრებულებს ეძლევათ
               შესაძლებლობა დასაქმდნენ თიბისისა და მის პარტნიორ კომპანიებში.
             </p>
-            <a href="#" class="read-more-link">
-              <span>გაიგე მეტი </span>
-            </a>
+          </div>
+          <div class="read-more">
+            <a href="#" class="read-more-link"> გაიგე მეტი </a>
           </div>
         </div>
       </section>
@@ -70,213 +73,253 @@
           </div>
 
           <div class="courses-container">
-            <div class="course-box">
-              <div class="course-img">
-                <img
-                  src="./assets/images/courses-images/ios-development.png"
-                  alt="iOS Development"
-                />
-              </div>
-              <div class="course-body">
-                <div class="course-text">
-                  <h5 class="course-title text">iOS Development</h5>
-                  <span class="registration-status text"
-                    >რეგისტრაცია დასრულებულია</span
-                  >
-                </div>
-                <div class="course-info">
+            <div class="course-box-wrapper">
+              <div class="course-box">
+                <div class="course-img">
                   <img
-                    src="./assets/images/arrow.svg"
-                    alt="course details arrow"
+                    src="./assets/images/courses-images/ios-development.png"
+                    alt="iOS Development"
                   />
-                  <a href="#">კურსის დეტალები</a>
+                </div>
+                <div class="course-body">
+                  <div class="course-text">
+                    <div class="course-title">
+                      <h3 class="text">iOS Development</h3>
+                    </div>
+                    <div class="registration-status">
+                      <p class="text">რეგისტრაცია დასრულებულია</p>
+                    </div>
+                  </div>
+                  <div class="course-info">
+                    <img
+                      src="./assets/images/arrow.svg"
+                      alt="course details arrow"
+                    />
+                    <a href="#">კურსის დეტალები</a>
+                  </div>
                 </div>
               </div>
             </div>
-            <div class="course-box">
-              <div class="course-img">
-                <img
-                  src="./assets/images/courses-images/react.jpg"
-                  alt="React course"
-                />
-              </div>
-              <div class="course-body">
-                <div class="course-text">
-                  <h5 class="course-title text">React</h5>
-                  <span class="registration-status text"
-                    >რეგისტრაცია დასრულებულია</span
-                  >
-                </div>
-                <div class="course-info">
+            <div class="course-box-wrapper">
+              <div class="course-box">
+                <div class="course-img">
                   <img
-                    src="./assets/images/arrow.svg"
-                    alt="course details arrow"
+                    src="./assets/images/courses-images/react.jpg"
+                    alt="React course"
                   />
-                  <a href="#">კურსის დეტალები</a>
+                </div>
+                <div class="course-body">
+                  <div class="course-text">
+                    <div class="course-title">
+                      <h3 class="course-title text">React</h3>
+                    </div>
+
+                    <div class="registration-status">
+                      <p class="text">რეგისტრაცია დასრულებულია</p>
+                    </div>
+                  </div>
+                  <div class="course-info">
+                    <img
+                      src="./assets/images/arrow.svg"
+                      alt="course details arrow"
+                    />
+                    <a href="#">კურსის დეტალები</a>
+                  </div>
                 </div>
               </div>
             </div>
-            <div class="course-box">
-              <div class="course-img">
-                <img
-                  src="./assets/images/courses-images/python.jpg"
-                  alt="iOS Development"
-                />
-              </div>
-              <div class="course-body">
-                <div class="course-text">
-                  <h5 class="course-title text">Intro to Python</h5>
-                  <span class="registration-status text"
-                    >რეგისტრაცია დასრულებულია</span
-                  >
-                </div>
-                <div class="course-info">
+            <div class="course-box-wrapper">
+              <div class="course-box">
+                <div class="course-img">
                   <img
-                    src="./assets/images/arrow.svg"
-                    alt="course details arrow"
+                    src="./assets/images/courses-images/python.jpg"
+                    alt="iOS Development"
                   />
-                  <a href="#">კურსის დეტალები</a>
+                </div>
+                <div class="course-body">
+                  <div class="course-text">
+                    <div class="course-title">
+                      <h3 class="course-title text">React</h3>
+                    </div>
+
+                    <div class="registration-status">
+                      <p class="text">რეგისტრაცია დასრულებულია</p>
+                    </div>
+                  </div>
+                  <div class="course-info">
+                    <img
+                      src="./assets/images/arrow.svg"
+                      alt="course details arrow"
+                    />
+                    <a href="#">კურსის დეტალები</a>
+                  </div>
                 </div>
               </div>
             </div>
-            <div class="course-box">
-              <div class="course-img">
-                <img
-                  src="./assets/images/courses-images/advanced-python.jpg"
-                  alt="Intro to Python"
-                />
-              </div>
-              <div class="course-body">
-                <div class="course-text">
-                  <h5 class="course-title text">Advanced Python</h5>
-                  <span class="registration-status text"
-                    >რეგისტრაცია დასრულებულია</span
-                  >
-                </div>
-                <div class="course-info">
+            <div class="course-box-wrapper">
+              <div class="course-box">
+                <div class="course-img">
                   <img
-                    src="./assets/images/arrow.svg"
-                    alt="course details arrow"
+                    src="./assets/images/courses-images/advanced-python.jpg"
+                    alt="Intro to Python"
                   />
-                  <a href="#">კურსის დეტალები</a>
+                </div>
+                <div class="course-body">
+                  <div class="course-text">
+                    <div class="course-title">
+                      <h3 class="course-title text">React</h3>
+                    </div>
+
+                    <div class="registration-status">
+                      <p class="text">რეგისტრაცია დასრულებულია</p>
+                    </div>
+                  </div>
+                  <div class="course-info">
+                    <img
+                      src="./assets/images/arrow.svg"
+                      alt="course details arrow"
+                    />
+                    <a href="#">კურსის დეტალები</a>
+                  </div>
                 </div>
               </div>
             </div>
-            <div class="course-box">
-              <div class="course-img">
-                <img
-                  src="./assets/images/courses-images/advanced-cybersecurity.jpg"
-                  alt="Advanced Cybersecurity Course"
-                />
-              </div>
-              <div class="course-body">
-                <div class="course-text">
-                  <h5 class="course-title text">
-                    Advanced Cybersecurity Course
-                  </h5>
-                  <span class="registration-status text"
-                    >რეგისტრაცია დასრულებულია</span
-                  >
-                </div>
-                <div class="course-info">
+            <div class="course-box-wrapper">
+              <div class="course-box">
+                <div class="course-img">
                   <img
-                    src="./assets/images/arrow.svg"
-                    alt="course details arrow"
+                    src="./assets/images/courses-images/advanced-cybersecurity.jpg"
+                    alt="Advanced Cybersecurity Course"
                   />
-                  <a href="#">კურსის დეტალები</a>
+                </div>
+                <div class="course-body">
+                  <div class="course-text">
+                    <div class="course-title">
+                      <h3 class="course-title text">React</h3>
+                    </div>
+
+                    <div class="registration-status">
+                      <p class="text">რეგისტრაცია დასრულებულია</p>
+                    </div>
+                  </div>
+                  <div class="course-info">
+                    <img
+                      src="./assets/images/arrow.svg"
+                      alt="course details arrow"
+                    />
+                    <a href="#">კურსის დეტალები</a>
+                  </div>
                 </div>
               </div>
             </div>
-            <div class="course-box">
-              <div class="course-img">
-                <img
-                  src="./assets/images/courses-images/TOT.jpg"
-                  alt="ToT - Training of Trainers
+            <div class="course-box-wrapper">
+              <div class="course-box">
+                <div class="course-img">
+                  <img
+                    src="./assets/images/courses-images/TOT.jpg"
+                    alt="ToT - Training of Trainers
                 "
-                />
-              </div>
-              <div class="course-body">
-                <div class="course-text">
-                  <h5 class="course-title text">ToT - Training of Trainers</h5>
-                  <span class="registration-status text"
-                    >რეგისტრაცია დასრულებულია</span
-                  >
-                </div>
-                <div class="course-info">
-                  <img
-                    src="./assets/images/arrow.svg"
-                    alt="course details arrow"
                   />
-                  <a href="#">კურსის დეტალები</a>
+                </div>
+                <div class="course-body">
+                  <div class="course-text">
+                    <div class="course-title">
+                      <h3 class="course-title text">React</h3>
+                    </div>
+
+                    <div class="registration-status">
+                      <p class="text">რეგისტრაცია დასრულებულია</p>
+                    </div>
+                  </div>
+                  <div class="course-info">
+                    <img
+                      src="./assets/images/arrow.svg"
+                      alt="course details arrow"
+                    />
+                    <a href="#">კურსის დეტალები</a>
+                  </div>
                 </div>
               </div>
             </div>
-            <div class="course-box">
-              <div class="course-img">
-                <img
-                  src="./assets/images/courses-images/blockchain.jpg"
-                  alt="Blockchain"
-                />
-              </div>
-              <div class="course-body">
-                <div class="course-text">
-                  <h5 class="course-title text">Blockchain</h5>
-                  <span class="registration-status text"
-                    >რეგისტრაცია დასრულებულია</span
-                  >
-                </div>
-                <div class="course-info">
+            <div class="course-box-wrapper">
+              <div class="course-box">
+                <div class="course-img">
                   <img
-                    src="./assets/images/arrow.svg"
-                    alt="course details arrow"
+                    src="./assets/images/courses-images/blockchain.jpg"
+                    alt="Blockchain"
                   />
-                  <a href="#">კურსის დეტალები</a>
+                </div>
+                <div class="course-body">
+                  <div class="course-text">
+                    <div class="course-title">
+                      <h3 class="course-title text">React</h3>
+                    </div>
+
+                    <div class="registration-status">
+                      <p class="text">რეგისტრაცია დასრულებულია</p>
+                    </div>
+                  </div>
+                  <div class="course-info">
+                    <img
+                      src="./assets/images/arrow.svg"
+                      alt="course details arrow"
+                    />
+                    <a href="#">კურსის დეტალები</a>
+                  </div>
                 </div>
               </div>
             </div>
-            <div class="course-box">
-              <div class="course-img">
-                <img
-                  src="./assets/images/courses-images/devops.jpg"
-                  alt="DevOps"
-                />
-              </div>
-              <div class="course-body">
-                <div class="course-text">
-                  <h5 class="course-title text">DevOps</h5>
-                  <span class="registration-status text"
-                    >რეგისტრაცია დასრულებულია
-                  </span>
+            <div class="course-box-wrapper">
+              <div class="course-box">
+                <div class="course-img">
+                  <img
+                    src="./assets/images/courses-images/devops.jpg"
+                    alt="DevOps"
+                  />
                 </div>
-                <div class="course-info">
-                  <img src="./assets/images/arrow.svg" alt="arrow" />
-                  <a href="#">კურსის დეტალები</a>
+                <div class="course-body">
+                  <div class="course-text">
+                    <div class="course-title">
+                      <h3 class="course-title text">React</h3>
+                    </div>
+
+                    <div class="registration-status">
+                      <p class="text">რეგისტრაცია დასრულებულია</p>
+                    </div>
+                  </div>
+                  <div class="course-info">
+                    <img src="./assets/images/arrow.svg" alt="arrow" />
+                    <a href="#">კურსის დეტალები</a>
+                  </div>
                 </div>
               </div>
             </div>
-            <div class="course-box">
-              <div class="course-img">
-                <img
-                  src="./assets/images/courses-images/information-security.jpg"
-                  alt="
+            <div class="course-box-wrapper">
+              <div class="course-box">
+                <div class="course-img">
+                  <img
+                    src="./assets/images/courses-images/information-security.jpg"
+                    alt="
                 Information Security Governance"
-                />
-              </div>
-              <div class="course-body">
-                <div class="course-text">
-                  <h5 class="course-title text">
-                    Information Security Governance
-                  </h5>
-                  <span class="registration-status text"
-                    >რეგისტრაცია დასრულებულია</span
-                  >
-                </div>
-                <div class="course-info">
-                  <img
-                    src="./assets/images/arrow.svg"
-                    alt="course details arrow"
                   />
-                  <a href="#">კურსის დეტალები</a>
+                </div>
+                <div class="course-body">
+                  <div class="course-text">
+                    <div class="course-title">
+                      <h3 class="course-title text">React</h3>
+                    </div>
+
+                    <div class="registration-status">
+                      <p class="text">რეგისტრაცია დასრულებულია</p>
+                    </div>
+                  </div>
+                  <div class="course-info">
+                    <img
+                      src="./assets/images/arrow.svg"
+                      alt="course details arrow"
+                    />
+                    <a href="#">კურსის დეტალები</a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -322,12 +365,13 @@
       </section>
       <section class="faq-section">
         <div class="container-faq">
-          <a href="#" class="view-all">
-            <span>ყველა კითხვა</span>
-          </a>
           <div class="faq-title">
             <h2>ხშირად დასმული კითხვები</h2>
+            <a href="#" class="view-all">
+              <span>ყველა კითხვა</span>
+            </a>
           </div>
+
           <div class="faq-list">
             <div class="faq-item">
               <div class="faq-question" data-container="toggle-1">
