responsive changes in footer

--- a/index.html
+++ b/index.html
@@ -367,9 +367,7 @@
         <div class="container-faq">
           <div class="faq-title">
             <h2>ხშირად დასმული კითხვები</h2>
-            <a href="#" class="view-all">
-              <span>ყველა კითხვა</span>
-            </a>
+            <a href="#" class="view-all view"> ყველა კითხვა </a>
           </div>
 
           <div class="faq-list">
@@ -459,37 +457,57 @@
               </article>
             </div>
           </div>
+          <a class="view-all view-all-responsive" href="#"> ყველა კითხვა </a>
         </div>
       </section>
     </main>
     <footer class="site-footer">
       <div class="container">
-        <div class="footer-logos-container">
-          <div class="tbc-logo">
-            <img src="./assets/images/tbc-logo.png" alt="TBC Bank logo" />
-          </div>
-          <div class="social-media-logos">
-            <a href="https://www.facebook.com/tbcbank/">
-              <img
-                class="facebook-logo"
-                src="./assets/images/facebook-logo.png"
-                alt="Facebook logo"
-              />
-            </a>
-            <a href="https://www.youtube.com/channel/UCGk9R2LV2ywOL80r8Xc6xtQ">
-              <img src="./assets/images/youtube-logo.png" alt="YouTube logo" />
-            </a>
-          </div>
-        </div>
-        <div class="footer-text">
-          <div class="copyright-terms-box">
-            <div class="copyright-box">
-              <a href="https://fsymbols.com/copyright/"> &#169; 2023 </a>
-              <span>ყველა უფლება დაცულია</span>
+        <div class="footer-container">
+          <div class="logo-and-text">
+            <div class="tbc-logo">
+              <img src="./assets/images/tbc-logo.png" alt="TBC Bank logo" />
             </div>
-            <a class="terms-link" href="#"> წესები და პირობები </a>
+            <div class="contact-email link">
+              <a class="contact-link" href="your-contact-page.html"
+                >მოგვწერეთ</a
+              >
+            </div>
+
+            <div class="footer-text">
+              <div class="copyright-terms-box">
+                <div class="copyright-text">
+                  <a href="https://fsymbols.com/copyright/"> &#169; 2023 </a>
+                  <span>ყველა უფლება დაცულია</span>
+                </div>
+                <a class="terms-link" href="#"> წესები და პირობები </a>
+              </div>
+            </div>
           </div>
-          <a class="contact-link" href="your-contact-page.html">მოგვწერეთ</a>
+          <div class="contact-box">
+            <div class="social-media-logos">
+              <a href="https://www.facebook.com/tbcbank/">
+                <img
+                  class="facebook-logo"
+                  src="./assets/images/facebook-logo.png"
+                  alt="Facebook logo"
+                />
+              </a>
+              <a
+                href="https://www.youtube.com/channel/UCGk9R2LV2ywOL80r8Xc6xtQ"
+              >
+                <img
+                  src="./assets/images/youtube-logo.png"
+                  alt="YouTube logo"
+                />
+              </a>
+            </div>
+            <div class="contact-email contact-email-responsive">
+              <a class="contact-link" href="your-contact-page.html"
+                >მოგვწერეთ</a
+              >
+            </div>
+          </div>
         </div>
       </div>
     </footer>
