set up burger-menu and make it responsive

--- a/index.html
+++ b/index.html
@@ -35,12 +35,31 @@
             </li>
           </ul>
         </nav>
+        <div class="respo-navigation">
+          <nav class="mobile-navigation">
+            <ul class="menu-list">
+              <li>
+                <a href="#">მთავარი</a>
+              </li>
+              <li>
+                <a href="#">TBC IT</a>
+              </li>
+              <li>
+                <a href="#">TBC x USAID</a>
+              </li>
+              <li>
+                <a href="#">რისკები</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
         <div class="burger-menu">
-          <img src="./assets/images/burger-menu.png" />
+          <div class="burger burger1"></div>
+          <div class="burger burger2"></div>
+          <div class="burger burger3"></div>
         </div>
       </div>
     </header>
-
     <main class="main-container">
       <section class="banner-container">
         <div class="container">
