--- a/index.html
+++ b/index.html
@@ -35,23 +35,25 @@
             </li>
           </ul>
         </nav>
-        <div class="respo-navigation">
-          <nav class="mobile-navigation">
-            <ul class="menu-list">
-              <li>
-                <a href="#">მთავარი</a>
-              </li>
-              <li>
-                <a href="#">TBC IT</a>
-              </li>
-              <li>
-                <a href="#">TBC x USAID</a>
-              </li>
-              <li>
-                <a href="#">რისკები</a>
-              </li>
-            </ul>
-          </nav>
+        <div class="respo-fade">
+          <div class="respo-navigation">
+            <nav class="mobile-navigation">
+              <ul class="menu-list">
+                <li>
+                  <a href="#">მთავარი</a>
+                </li>
+                <li>
+                  <a href="#">TBC IT</a>
+                </li>
+                <li>
+                  <a href="#">TBC x USAID</a>
+                </li>
+                <li>
+                  <a href="#">რისკები</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
         </div>
         <div class="burger-menu">
           <div class="burger burger1"></div>
