create burger menu animation

--- a/index.html
+++ b/index.html
@@ -36,24 +36,22 @@
           </ul>
         </nav>
         <div class="respo-fade">
-          <div class="respo-navigation">
-            <nav class="mobile-navigation">
-              <ul class="menu-list">
-                <li>
-                  <a href="#">მთავარი</a>
-                </li>
-                <li>
-                  <a href="#">TBC IT</a>
-                </li>
-                <li>
-                  <a href="#">TBC x USAID</a>
-                </li>
-                <li>
-                  <a href="#">რისკები</a>
-                </li>
-              </ul>
-            </nav>
-          </div>
+          <nav class="mobile-navigation">
+            <ul class="mobile-menu-list">
+              <li>
+                <a href="#">მთავარი</a>
+              </li>
+              <li>
+                <a href="#">TBC IT</a>
+              </li>
+              <li>
+                <a href="#">TBC x USAID</a>
+              </li>
+              <li>
+                <a href="#">რისკები</a>
+              </li>
+            </ul>
+          </nav>
         </div>
         <div class="burger-menu">
           <div class="burger burger1"></div>
@@ -352,11 +350,16 @@
           <h2>პროექტის პარტნიორები</h2>
         </div>
         <div class="slider-container">
-          <img
+          <svg
             class="slider-arrow arrow"
             id="prev-arrow"
-            src="./assets/images/slider-images/slider-left-arrow.svg"
-          />
+            fill="#fff"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 21 41"
+          >
+            <path d="M20.3 40.8 0 20.5 20.3.2l.7.7L1.3 20.5 21 40.1z"></path>
+          </svg>
+
           <div class="slide">
             <div class="slides-box">
               <img src="./assets/images/slider-images/usaid.png" />
@@ -376,11 +379,15 @@
               <img src="./assets/images/slider-images/UFC.png" />
             </div>
           </div>
-          <img
+          <svg
             class="slider-arrow arrow"
             id="next-arrow"
-            src="./assets/images/slider-images/slider-right-arrow.svg"
-          />
+            fill="#fff"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 21 41"
+          >
+            <path d="M20.3 40.8 0 20.5 20.3.2l.7.7L1.3 20.5 21 40.1z"></path>
+          </svg>
         </div>
         <div class="slider-bullets"></div>
       </section>
