create slider animation and add footer terms container

--- a/index.html
+++ b/index.html
@@ -490,6 +490,70 @@
       </section>
     </main>
     <footer class="site-footer">
+      <div class="footer-terms">
+        <div class="footer-terms-container">
+          <div class="footer-terms-close"></div>
+          <div class="footer-terms-body">
+            <div class="footer-terms-title">
+              <span>წესები და პირობები</span>
+            </div>
+            <div class="footer-terms-text">
+              <p>
+                წინამდებარე ვებ-გვერდის გამოყენება რეგულირდება სს „თიბისი
+                ბანკის“ (საიდენტიფიკაციო ნომერი: 204854595, მისამართი: თბილისი,
+                კ. მარჯანიშვილის ქ. #7) მიერ დადგენილი წესებითა და პირობებით.
+              </p>
+              <p>
+                წინამდებარე ვებ-გვერდის გამოყენება რეგულირდება სს „თიბისი
+                ბანკის“ (საიდენტიფიკაციო ნომერი: 204854595, მისამართი: თბილისი,
+                კ. მარჯანიშვილის ქ. #7) მიერ დადგენილი წესებითა და პირობებით.
+              </p>
+              <p>
+                წინამდებარე ვებ-გვერდის გამოყენება რეგულირდება სს „თიბისი
+                ბანკის“ (საიდენტიფიკაციო ნომერი: 204854595, მისამართი: თბილისი,
+                კ. მარჯანიშვილის ქ. #7) მიერ დადგენილი წესებითა და პირობებით.
+              </p>
+              <p>
+                წინამდებარე ვებ-გვერდის გამოყენება რეგულირდება სს „თიბისი
+                ბანკის“ (საიდენტიფიკაციო ნომერი: 204854595, მისამართი: თბილისი,
+                კ. მარჯანიშვილის ქ. #7) მიერ დადგენილი წესებითა და პირობებით.
+              </p>
+              <p>
+                წინამდებარე ვებ-გვერდის გამოყენება რეგულირდება სს „თიბისი
+                ბანკის“ (საიდენტიფიკაციო ნომერი: 204854595, მისამართი: თბილისი,
+                კ. მარჯანიშვილის ქ. #7) მიერ დადგენილი წესებითა და პირობებით.
+              </p>
+              <p>
+                წინამდებარე ვებ-გვერდის გამოყენება რეგულირდება სს „თიბისი
+                ბანკის“ (საიდენტიფიკაციო ნომერი: 204854595, მისამართი: თბილისი,
+                კ. მარჯანიშვილის ქ. #7) მიერ დადგენილი წესებითა და პირობებით.
+              </p>
+              <p>
+                წინამდებარე ვებ-გვერდის გამოყენება რეგულირდება სს „თიბისი
+                ბანკის“ (საიდენტიფიკაციო ნომერი: 204854595, მისამართი: თბილისი,
+                კ. მარჯანიშვილის ქ. #7) მიერ დადგენილი წესებითა და პირობებით.
+              </p>
+              <p>
+                წინამდებარე ვებ-გვერდის გამოყენება რეგულირდება სს „თიბისი
+                ბანკის“ (საიდენტიფიკაციო ნომერი: 204854595, მისამართი: თბილისი,
+                კ. მარჯანიშვილის ქ. #7) მიერ დადგენილი წესებითა და პირობებით.
+              </p>
+              <p>
+                წინამდებარე ვებ-გვერდის გამოყენება რეგულირდება სს „თიბისი
+                ბანკის“ (საიდენტიფიკაციო ნომერი: 204854595, მისამართი: თბილისი,
+                კ. მარჯანიშვილის ქ. #7) მიერ დადგენილი წესებითა და პირობებით.
+              </p>
+              <p>
+                წინამდებარე ვებ-გვერდის გამოყენება რეგულირდება სს „თიბისი
+                ბანკის“ (საიდენტიფიკაციო ნომერი: 204854595, მისამართი: თბილისი,
+                კ. მარჯანიშვილის ქ. #7) მიერ დადგენილი წესებითა და პირობებით.
+              </p>
+              <h5>ინფორმაციის სიზუსტე</h5>
+            </div>
+            <div class="footer-terms-close-btn">დახურვა</div>
+          </div>
+        </div>
+      </div>
       <div class="container">
         <div class="footer-container">
           <div class="logo-and-text">
@@ -508,7 +572,9 @@
                   <a href="https://fsymbols.com/copyright/"> &#169; 2023 </a>
                   <span>ყველა უფლება დაცულია</span>
                 </div>
-                <a class="terms-link" href="#"> წესები და პირობები </a>
+                <a class="terms-link" id="terms-info-link" href="#">
+                  წესები და პირობები
+                </a>
               </div>
             </div>
           </div>
