--- a/index.html
+++ b/index.html
@@ -492,10 +492,12 @@
     <footer class="site-footer">
       <div class="footer-terms">
         <div class="footer-terms-container">
-          <div class="footer-terms-close"></div>
+          <div class="footer-terms-close">
+            <img src="./assets/close.svg" alt="closing button" />
+          </div>
           <div class="footer-terms-body">
             <div class="footer-terms-title">
-              <span>წესები და პირობები</span>
+              <span class="terms-title">წესები და პირობები</span>
             </div>
             <div class="footer-terms-text">
               <p>
@@ -504,51 +506,280 @@
                 კ. მარჯანიშვილის ქ. #7) მიერ დადგენილი წესებითა და პირობებით.
               </p>
               <p>
-                წინამდებარე ვებ-გვერდის გამოყენება რეგულირდება სს „თიბისი
-                ბანკის“ (საიდენტიფიკაციო ნომერი: 204854595, მისამართი: თბილისი,
-                კ. მარჯანიშვილის ქ. #7) მიერ დადგენილი წესებითა და პირობებით.
+                ტერმინები „ბანკი“, „ჩვენ“ გულისხმობს სს „თიბისი ბანკს“ (ასევე
+                მისი ჯგუფის წევრ მონათესავე, შვილობილ, აფილირებულ კომპანიებს),
+                ხოლო ტერმინი „თქვენ“, „მომხმარებელი“ გულისხმობს ინდივიდს,
+                კომპანიას, ორგანიზაციულ წარმონაქმნს, რომელიც იყენებს ბანკის
+                წინამდებარე ვებ-გვერდს.
               </p>
               <p>
-                წინამდებარე ვებ-გვერდის გამოყენება რეგულირდება სს „თიბისი
-                ბანკის“ (საიდენტიფიკაციო ნომერი: 204854595, მისამართი: თბილისი,
-                კ. მარჯანიშვილის ქ. #7) მიერ დადგენილი წესებითა და პირობებით.
+                გთხოვთ, ყურადღებით გაეცნოთ წინამდებარე წესებსა და პირობებს,
+                რომელიც არეგულირებს თქვენ მიერ ვებ-გვერდის გამოყენების პირობებს.
+                იმ შემთხვევაში, თუ არ ეთანხმებით წინამდებარე წესებსა და
+                პირობებს, გთხოვთ, დატოვოთ ბანკის ვებ-გვერდი.
               </p>
               <p>
-                წინამდებარე ვებ-გვერდის გამოყენება რეგულირდება სს „თიბისი
-                ბანკის“ (საიდენტიფიკაციო ნომერი: 204854595, მისამართი: თბილისი,
-                კ. მარჯანიშვილის ქ. #7) მიერ დადგენილი წესებითა და პირობებით.
+                ვებ-გვერდზე სტუმრობით, ან მასზე გამოქვეყნებული ინფორმაციის
+                გამოყენებით, ადასტურებთ და სრულად ეთანხმებით მითითებულ ყველა
+                დანაწესს, რომელიც შესაძლოა ცალმხრივად შეიცვალოს სს „თიბისი
+                ბანკის“ მიერ გარკვეული პერიოდულობით, რაც დაფიქსირდება მოცემულ
+                ვებ-გვერდზე და მასზე თქვენი სტუმრობა ნიშნავს შესაბამის პირობებზე
+                დათანხმებას.
               </p>
               <p>
-                წინამდებარე ვებ-გვერდის გამოყენება რეგულირდება სს „თიბისი
-                ბანკის“ (საიდენტიფიკაციო ნომერი: 204854595, მისამართი: თბილისი,
-                კ. მარჯანიშვილის ქ. #7) მიერ დადგენილი წესებითა და პირობებით.
+                ბანკის ვებ-გვერდზე მითითებული ინფორმაცია, უმეტეს შემთხვევაში,
+                განკუთვნილია იმ პირებისთვის, რომლებიც დაინტერესებულნი არიან
+                საქართველოს ფინანსურ ბაზარზე მომსახურების მიღებით. შესაძლოა,
+                ვებ-გვერდზე მითითებული ინფორმაცია არ იყოს ხელმისაწვდომი მსოფლიოს
+                ყველა გეოგრაფიულ არეალში, ბანკის გადაწყვეტილების შესაბამისად.
               </p>
               <p>
-                წინამდებარე ვებ-გვერდის გამოყენება რეგულირდება სს „თიბისი
-                ბანკის“ (საიდენტიფიკაციო ნომერი: 204854595, მისამართი: თბილისი,
-                კ. მარჯანიშვილის ქ. #7) მიერ დადგენილი წესებითა და პირობებით.
+                ბანკის ვებ-გვერდზე მითითებული გარკვეული ინფორმაციის
+                გასაანალიზებლად, შესაძლოა დაგჭირდეთ შესაბამისი სფეროს
+                სპეციალისტის კონსულტაცია.
               </p>
               <p>
-                წინამდებარე ვებ-გვერდის გამოყენება რეგულირდება სს „თიბისი
-                ბანკის“ (საიდენტიფიკაციო ნომერი: 204854595, მისამართი: თბილისი,
-                კ. მარჯანიშვილის ქ. #7) მიერ დადგენილი წესებითა და პირობებით.
-              </p>
-              <p>
-                წინამდებარე ვებ-გვერდის გამოყენება რეგულირდება სს „თიბისი
-                ბანკის“ (საიდენტიფიკაციო ნომერი: 204854595, მისამართი: თბილისი,
-                კ. მარჯანიშვილის ქ. #7) მიერ დადგენილი წესებითა და პირობებით.
-              </p>
-              <p>
-                წინამდებარე ვებ-გვერდის გამოყენება რეგულირდება სს „თიბისი
-                ბანკის“ (საიდენტიფიკაციო ნომერი: 204854595, მისამართი: თბილისი,
-                კ. მარჯანიშვილის ქ. #7) მიერ დადგენილი წესებითა და პირობებით.
-              </p>
-              <p>
-                წინამდებარე ვებ-გვერდის გამოყენება რეგულირდება სს „თიბისი
-                ბანკის“ (საიდენტიფიკაციო ნომერი: 204854595, მისამართი: თბილისი,
-                კ. მარჯანიშვილის ქ. #7) მიერ დადგენილი წესებითა და პირობებით.
+                ბანკის ვებ-გვერდზე მითითებული კონკრეტული პროდუქტები/მომსახურება
+                რეგულირდება სპეციალური საბანკო მომსახურების ხელშეკრულებით.
               </p>
               <h5>ინფორმაციის სიზუსტე</h5>
+              <p>
+                ბანკი არ არის პასუხისმგებელი ვებ-გვერდზე მითითებული ინფორმაციის
+                შინაარსის სიზუსტეზე, მიუხედავად ჩვენი დიდი ძალისხმევისა
+                მოგაწოდოთ უტყუარი ინფორმაცია. აღნიშნული არ წარმოადგენს
+                დადასტურებას და გარანტიას, რომ ვებ-გვერდზე მითითებული ინფორმაცია
+                არის ზუსტი, უტყუარი და შესაფერისი მისი ნებისმიერი
+                გამოყენებისთვის. ბანკის ვებ-გვერდზე არსებული ნებისმიერი
+                ინფორმაცია მითითებულია „როგორც არის“ (“As Is”) საწყისზე.
+                შესაბამისად, ვებ-გვერდზე არსებული ნებისმიერი ინფორმაციის
+                გამოყენება სრულად წარმოადგენს მომხმარებლის პირად რისკს და ბანკი
+                არ არის პასუხისმგებელი ვებ-გვერდზე გამოქვეყნებული ინფორმაციის
+                გამოყენებით დამდგარ ზიანზე. წინამდებარე დათქმა არ ეხება სს
+                თიბისი ბანკის ვებ-გვერდზე www.tbcbank.ge განთავსებული
+                ხელშეკრულების შემადგენელ ნაწილებს.
+              </p>
+              <p>
+                ვებ-გვერდზე არსებული ინფორმაცია არ წარმოადგენს დაპირებას
+                მომსახურებაზე/პროდუქტზე ან რაიმე სახის სახელშეკრულებო
+                ურთიერთობით ბანკის შებოჭვის საფუძველს.
+              </p>
+              <h5>პასუხისმგებლობის შეზღუდვა</h5>
+              <p>
+                ბანკი და მისი შესაბამისი თანამშრომლები არ არიან პასუხისმგებელნი
+                დამდგარი შედეგისათვის, რომელიც მოიცავს პირდაპირ, არაპირდაპირ,
+                სპეციალურ, შემთხვევით, მიზეზ-შედეგობრივ, არასახელშეკრულებო
+                ზიანს, რაც გამოწვეულია ვებ-გვერდზე მითითებული ინფორმაციის
+                გამოყენებით.
+              </p>
+              <p>
+                ბანკი არ აგებს პასუხს ვებ-გვერდის გამოყენებით გამოწვეულ რაიმე
+                სახის ზიანზე, დანაკარგზე, თუნდაც ტექნიკური შეფერხების, დეფექტის,
+                ოპერაციის გაუქმება/შეჩერების, კომპიუტერული ვირუსის, ან სისტემის
+                გაუმართაობის შემთხვევაში.
+              </p>
+              <p>
+                ვებ-გვერდზე წარმოდგენილი შინაარსის ხელმისაწვდომობა შესაძლოა
+                დამოკიდებული იყოს საძიებო სისტემის ფუნქციებსა და შეზღუდვებზე.
+                ბანკი არ იღებს პასუხისმგებლობას იმ შემთხვევებზე, თუ ვებ-გვერდის
+                შემადგენელი გარკვეული კომპონენტები ხელმიუწვდომელია თქვენთვის.
+              </p>
+              <h5>ვებ-გვერდის გამოყენება</h5>
+              <p>
+                ვებ-გვერდზე მითითებული ინფორმაცია განკუთვნილია მხოლოდ
+                მომხმარებლების პირადი გამოყენებისთვის. თქვენ ვალდებული ხართ,
+                ვებ-გვერდზე განთავსებული ინფორმაცია, ასევე ვებ-გვერდის
+                სტრუქტურა, გამოსახულება და დიაზინი არ გაავრცელოთ, არ გადასცეთ,
+                არ მოახდინოთ მისი ასლების დამზადება ან/და რეპროდუცირება (მათ
+                შორის სოციალურ მედიაში) კომერციული მიზნებისთვის, ბანკის
+                წინასწარი წერილობითი თანხმობის გარეშე, რაც ჩვენს ერთპიროვნულ
+                დისკრეციას წარმოადგენს. ბანკის წინასწარი წერილობითი თანხმობა არ
+                არის საჭირო, თუ ვებ-გვერდზე მითითებული ინფორმაციის/შინაარსის
+                გამოყენება ხდება ბანკის წინასწარ განცხადებული თანხმობის
+                შესაბამისად, ან ასეთი ინფორმაცია გამოიყენება პირადი
+                მოხმარებისთვის, საგანმანათლებლო ან ინფორმაციული მიზნებისთვის.
+              </p>
+              <p>
+                ვებ-გვერდისა და სისტემის არაავტორიზებული გამოყენება (მათ შორის
+                არარსებული დასახელებით და კოდით) სასტიკად აკრძალულია. იქ, სადაც
+                მოითხოვება რეგისტრაცია და პაროლის გამოყენება, თქვენ ვალდებული
+                ხართ, კონფიდენციალურად შეინახოთ და არ დაუშვათ მესამე პირის მიერ
+                ვებ-გვერდზე წვდომის შესაძლებლობა თქვენ მაგივრად. რეგისტრაციისა
+                და პაროლის გამოყენების დროს, თქვენ აცნობიერებთ და ეთანხმებით,
+                რომ ბანკმა შესაძლოა მოახდინოს რეგისტრაციისა და პაროლის
+                დეაქტივაცია და აღნიშნული ქმედებით შეზღუდოს ვებ-გვერდზე წვდომა იმ
+                შემთხვევაში, თუ თქვენი მხრიდან ადგილი აქვს წესებისა და პირობების
+                დარღვევას.
+              </p>
+              <p>
+                შესაძლებელია, რომ ვებ-გვერდის რომელიმე კონკრეტული გვერდი
+                შეიცავდეს წინამდებარე წესებისაგან და პირობებისაგან განსხვავებულ
+                დანაწესებს. მათ შორის კოლიზიის არსებობის შემთხვევაში,
+                უპირატესობა ენიჭება წინამდებარე დანაწესებს.
+              </p>
+              <p>
+                ბანკის ვებ-გვერდის (მათ შორის ფორუმების) გამოყენებისას,
+                აკრძალული გაქვთ უკანონო/თაღლითური ქმედება, ცილისმწამებლური,
+                სიძულვილის ენით საუბარი, ან სხვა არასასურველი ინფორმაციის
+                განთავსება, გავრცელება/ტრანსმისია, რაც შესაძლოა არღვევდეს მოქმედ
+                კანონმდებლობას და რეგულაციას, ან ზიანს აყენებდეს ბანკის საქმიან
+                რეპუტაციას. ასევე გეკრძალებათ ვებ-გვერდისთვის ზიანის მიყენება
+                ნებისმიერი სახის მავნე პროგრამის მეშვეობით („ტროას ცხენი,“
+                „ლოგიკური ბომბი“ ან სხვა მსგავსი ქმედებების განხორციელება).
+              </p>
+              <p>
+                იმ შემთხვევაში, თუ ვებ-გვერდზე წვდომა შეუძლებელი გახდება ბანკის
+                ტექნიკური შეფერხების, ან ბანკისაგან დამოუკიდებელი სხვა
+                ნებისმიერი მიზეზით, ბანკი არ არის პასუხისმგებელი დამდგარ
+                შედეგზე.
+              </p>
+              <h5>ინტელექტუალური საკუთრება</h5>
+              <p>
+                ვებ-გვერდზე, მის შინაარსზე, სტრუქტურასა და დიზაინზე სრულად
+                ვრცელდება სს „თიბისი ბანკის“ საავტორო უფლება. სს „თიბისი ბანკის“
+                ექსკლუზიური უფლებები ვრცელდება ასევე ბანკის მიერ შექმნილ და
+                რეგისტრირებულ ინტელექტუალური საკუთრების ნებისმიერ ობიექტზე, მათ
+                შორის მის კუთვნილ სასაქონლო ნიშნებზე.
+              </p>
+              <p>
+                ბანკის საავტორო (©) და სხვა ინტელექტუალური საკუთრების უფლებები
+                ვრცელდება წინამდებარე ვებ-გვერდსა და მასზე არსებულ მთელ
+                შინაარსზე (პროდუქტებისა და მომსახურების ჩათვლით).
+              </p>
+              <p>
+                აკრძალულია წინამდებარე ვებ-გვერდზე მითითებული ნებისმიერი
+                ინფორმაციის/შინაარსის, მათ შორის ლოგო, პიქტოგრამა, გრაფიკა,
+                სურათი, გამოსახულება, პატენტი, მომსახურების/სასაქონლო ნიშნები,
+                დიზაინი, ბანკის მიერ შექმნილი ვიზუალური მედია და სხვა
+                ინტელექტუალური საკუთრების (რეგისტრირებული, ან არარეგისტრირებული)
+                უნებართვო გამოყენება, დამუშავება და გამოქვეყნება (მათ შორის
+                სოციალურ მედიაში) ბანკის წინასწარი წერილობითი თანხმობის გარეშე.
+                ბანკის თანხმობა არ არის საჭირო, თუ წინამდებარე მონაცემების
+                გამოყენება ხორციელდება არაკომერციული, პირადი მიზნებისთვის და იმ
+                შემთხვევებში, როცა წინასწარ თანხმობას არ ითვალიწინებს
+                საქართველოს კანონმდებლობა, ან შესაბამისი საერთაშორისო რეგულაცია.
+              </p>
+              <p>
+                ინტელექტუალური საკუთრების ვებ-გვერდზე მითითება არ ნიშნავს
+                მომხმარებლისათვის მის გამოყენებაზე ლიცენზიის მინიჭებას.
+                ვებ-გვერდიდან მომხმარებლის მიერ ნებისმიერი ინფორმაციის
+                კომერციული მიზნებისთვის გადმოწერა,ან ასლის დამზადება ჩაითვლება
+                საქართველოს კანონმდებლობის დარღვევად.
+              </p>
+              <p>
+                იმ შემთხვევაში, თუ ვებ-გვერდი მომხმარებლებს ანიჭებს ჩატის,
+                ინტერაქციისა, თუ დიალოგის/დისკუსიის გამართვის შესაძლებლობას,
+                ვალდებულნი ხართ, წინამდებარე არხებში დააფიქსიროთ მხოლოდ ის
+                ინფორმაცია, რომელზეც ფლობთ ინტელექტუალურ საკუთრებას, ან გაქვთ
+                შესაბამისი პირის თანხმობა. ამასთან ერთად, ბანკს ანიჭებთ უფლებას
+                დაამუშაოს (მათ შორის, გამოაქვეყნოს) თქვენ მიერ დაფიქსირებული
+                ინფორმაცია კანონიერი, საკომუნიკაციო/საინფორმაციო მიზნებისათვის.
+              </p>
+              <p>
+                ბანკის ვებ-გვერდზე მითითებული კომპანიების სახელები, სასაქონლო
+                ნიშნები, ლოგოები ეკუთვნის შესაბამის პირებს.
+              </p>
+              <h5>კონფიდენციალურობის დაცვა</h5>
+              <p>
+                სს „თიბისი ბანკი“ უზრუნველყოფს მისთვის მიწოდებულ კონფიდენციალური
+                ინფორმაციის მაქსიმალურ დაცულობას კანონმდებლობით დადგენილი წესით.
+              </p>
+              <p>
+                ბანკი მომხმარებლის პერსონალურ ინფორმაციას ითხოვს საჭიროებიდან
+                გამომდინარე, იმ მოცულობით, რაც საჭიროა ეფექტური მომსახურების
+                გასაწევად საქართველოს კანონმდებლობით დადგენილი წესით.
+                მომხმარებელს ნებისმიერ დროს შეუძლია მოითხოვოს ინფორმაცია
+                ბანკისგან მისი პერსონალური ინფორმაციის დამუშავების თაობაზე.
+              </p>
+              <p>
+                ბანკი მაქსიმალურად ზრუნავს თქვენი პირადი კონფიდენციალური
+                ინფორმაციის უსაფრთხოებასა და გაუმჟღავნებლობაზე, მაგრამ იმ ფაქტის
+                გათვალისწინებით, რომ თქვენი მონაცემების დისტანციურად მოწოდების
+                პროცესი არ არის დაშიფრული, ბანკი იხსნის პასუხისმგებლობას მესამე
+                პირების მიერ თქვენი მონაცემების არასანქცირებულ წვდომაზე ამ
+                მონაცემების ბანკისთვის მიწოდების დროს.
+              </p>
+              <p>
+                კონფიდენციალური ინფორმაციის ბანკისთვის მიწოდების დროს,
+                მომხმარებელი ვალდებულია, არ მოახდინოს ისეთი ავტომატური
+                საშუალებების გამოყენება, რამაც შესაძლოა საფრთხე შეუქმნას ბანკის
+                უსაფრთხოებასა და დაცულობას.
+              </p>
+              <p>
+                ვებ-გვერდის სტუმრობისას, თქვენ მიერ დატოვებული ნებისმიერი
+                „ელექტრონული ნაკვალევი“, შესაძლოა გამოყენებულ იქნას ბანკისთვის
+                დამახასიათებელი ტექნიკური ოპერაციების განსახორციელებლად,
+                სტატისტიკის საწარმოებლად, ან საიტის ხარისხის გასაუმჯობესებლად.
+              </p>
+              <p>
+                ბანკის მიერ ადმინისტრაციული ფუნქციების ეფექტურად შესასრულებლად,
+                შესაძლოა თქვენ მიერ გამოგზავნილ იქნას პერსონალური მონაცემები
+                ბანკის ელექტრონულ ფოსტაზე. გაცნობებთ, რომ ბანკი არ არის
+                პასუხისმგებელი, გადაცემის პროცესში, მესამე პირის არასანქცირებული
+                ჩარევის შედეგად, აღნიშნული ინფორმაციის უკანონო მოპოვებაზე, ან იმ
+                ინფორმაციაზე, რომელიც მომხმარებელმა თავადვე გახადა საჯარო, ან
+                გაავრცელა ნაკლებად უსაფრთხო ელექტრონული საშუალებებით.
+              </p>
+              <p>
+                წინამდებარე წესებსა და პირობებზე დათანხმებით, მომხმარებელი
+                ადასტურებს ბანკისთვის მინიჭებულ უფლებას, ბანკი დაუკავშირდეს
+                ან/და გაუგზავნოს მომხმარებელს შეტყობინება (მათ შორის,
+                ელექტრონული ფორმით: მოკლე ტექსტური შეტყობინება, ელექტრონული
+                ფოსტა) ვებ-გვერდზე მითითებული პროდუქტისა, თუ მომსახურების
+                თაობაზე.
+              </p>
+              <h5>ვებ-გვერდზე მითითებული ბმულები</h5>
+              <p>
+                ბანკი უფლებამოსილია ვებ-გვერდზე მიუთითოს ჰიპერბმულები, მესამე
+                პირის მფლობელობაში არსებული ვებ-გვერდების ბმულები, თქვენივე
+                ინფორმირებულობის უზრუნველსაყოფად.
+              </p>
+              <p>
+                მესამე პირის მფლობელობაში არსებული ბმულები და მათზე მითითებული
+                ინფორმაცია, არ ექვემდებარება ბანკის კონტროლს, ხოლო მათზე
+                მოცემული პროდუქტებისა და შინაარსის სიზუსტე არ წარმოადგენს ბანკის
+                პასუხისმგებლობის საგანს. შესაბამისად, თქვენ ხართ პასუხისმგებელი
+                მესამე პირების რესურსებზე/ვებ-გვერდზე არსებული წესებისა და
+                პირობების გაცნობაზე.
+              </p>
+              <h5>ცვლილების განხორციელება</h5>
+              <p>
+                ბანკი უფლებამოსილია ცვლილება შეიტანოს წინამდებარე წესებსა და
+                პირობებში მომხმარებელთათვის წინასწარი შეტყობინების გარეშე.
+                მომხმარებელი პასუხისმგებელია რეგულარულად გაეცნოს წინამდებარე
+                წესებსა და პირობებს. თქვენ მიერ ვებ-გვერდზე სტუმრობა/მითითებული
+                ინფორმაციის გამოყენება ავტომატურად ნიშნავს თქვენს დათანხმებას
+                წინამდებარე წესებისა და პირობების მოთხოვნებზე.
+              </p>
+              <h5>მარეგულირებელი სამართალი და იურისდიქცია</h5>
+              <p>
+                წინამდებარე წესები და პირობები რეგულირდება საქართველოს
+                კანონმდებლობით.
+              </p>
+              <p>
+                დავის წარმოშობის შემთხვევაში, საქმეს განიხილავს საქართველოს
+                საერთო სასამართლოების სისტემა კანონმდებლობით დადგენილი წესით.
+              </p>
+              <p>
+                წინამდებარე დანაწესების კონკრეტული ჩანაწერის ბათილობა არ იწვევს
+                წესებისა და პირობების სხვა დათქმების ბათილობას.
+              </p>
+              <h5>საკონტაქტო ინფორმაცია</h5>
+              <p>
+                ნებისმიერი კითხვის არსებობის შემთხვევაში, რაც უკავშირდება
+                წინამდებარე წესებსა და პირობებს და ვებ-გვერდზე მითითებულ
+                ინფორმაციას, გთხოვთ, მოგვმართოთ წერილობითი სახით მისამართზე:
+                თბილისიი, ატენის ქ. 2 ან მოგვწეროთ ელექტრონული ფოსტის
+                საშუალებით:
+                <a id="email" href="mailto:itacademy@tbcbank.com.ge"
+                  >itacademy@tbcbank.com.ge</a
+                >,
+              </p>
+              <p>
+                “სს „თიბისი ბანკის“ მომსახურებით სარგებლობისას მომხმარებელთა
+                დაცვის, კიბერუსაფრთოებისა და კონფიდენციალურობის დაცვის
+                პრინციპები ხელმისაწვდომია ვებ-გვერდზე
+                <a href="https://www.tbcbank.ge/web/ka">www.tbcbank.ge</a> ”
+              </p>
             </div>
             <div class="footer-terms-close-btn">დახურვა</div>
           </div>
@@ -561,7 +792,7 @@
               <img src="./assets/images/tbc-logo.png" alt="TBC Bank logo" />
             </div>
             <div class="contact-email link">
-              <a class="contact-link" href="your-contact-page.html"
+              <a class="contact-link" href="mailto:itacademy@tbcbank.com.ge"
                 >მოგვწერეთ</a
               >
             </div>
