Improve responsiveness of terms and conditions section, and make adjustments in the questions section

--- a/index.html
+++ b/index.html
@@ -402,7 +402,10 @@
             <div class="faq-item">
               <div class="faq-question" data-container="toggle-1">
                 <h3>როგორ ხდება კურსებზე რეგისტრაცია და შერჩევა?</h3>
-                <img src="./assets/images/downward-arrow.svg" />
+                <img
+                  class="question-arrow"
+                  src="./assets/images/downward-arrow.svg"
+                />
               </div>
               <article class="faq-answer" id="toggle-1">
                 <p>
@@ -461,7 +464,10 @@
             <div class="faq-item">
               <div class="faq-question" data-container="toggle-2">
                 <h3>შემიძლია თუ არა ერთზე მეტ კურსზე რეგისტრაცია?</h3>
-                <img src="./assets/images/downward-arrow.svg" />
+                <img
+                  class="question-arrow"
+                  src="./assets/images/downward-arrow.svg"
+                />
               </div>
               <article class="faq-answer" id="toggle-2">
                 <p>
@@ -475,7 +481,10 @@
             <div class="faq-item">
               <div class="faq-question" data-container="toggle-3">
                 <h3>რა ღირს სწავლა პროგრამის ფარგლებში?</h3>
-                <img src="./assets/images/downward-arrow.svg" />
+                <img
+                  class="question-arrow"
+                  src="./assets/images/downward-arrow.svg"
+                />
               </div>
               <article class="faq-answer" id="toggle-3">
                 <p>
