changes in folders structure

--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
       href="https://static.wixstatic.com/media/93e8a3_03d83d668a5f417ca646a5e511f8c02a%7Emv2.png/v1/fill/w_192%2Ch_192%2Clg_1%2Cusm_0.66_1.00_0.01/93e8a3_03d83d668a5f417ca646a5e511f8c02a%7Emv2.png"
       type="image/png"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./styles/main/style.css" />
     <title>TBC x USAID</title>
   </head>
   <body>
     <header class="site-header">
       <div class="header-container container">
         <a class="tbc-academy-logo" href="#" aria-label="Home">
-          <img src="assets/images/logo.svg" alt="TBC Academy Logo" />
+          <img
+            src="assets/images/common-images/logo.svg"
+            alt="TBC Academy Logo"
+          />
         </a>
         <nav class="main-navigation">
           <ul class="menu-list">
@@ -111,7 +114,7 @@
                   </div>
                   <div class="course-info">
                     <img
-                      src="./assets/images/arrow.svg"
+                      src="./assets/images/common-images/arrow.svg"
                       alt="course details arrow"
                     />
                     <a href="#">კურსის დეტალები</a>
@@ -139,7 +142,7 @@
                   </div>
                   <div class="course-info">
                     <img
-                      src="./assets/images/arrow.svg"
+                      src="./assets/images/common-images/arrow.svg"
                       alt="course details arrow"
                     />
                     <a href="#">კურსის დეტალები</a>
@@ -167,7 +170,7 @@
                   </div>
                   <div class="course-info">
                     <img
-                      src="./assets/images/arrow.svg"
+                      src="./assets/images/common-images/arrow.svg"
                       alt="course details arrow"
                     />
                     <a href="#">კურსის დეტალები</a>
@@ -195,7 +198,7 @@
                   </div>
                   <div class="course-info">
                     <img
-                      src="./assets/images/arrow.svg"
+                      src="./assets/images/common-images/arrow.svg"
                       alt="course details arrow"
                     />
                     <a href="#">კურსის დეტალები</a>
@@ -223,7 +226,7 @@
                   </div>
                   <div class="course-info">
                     <img
-                      src="./assets/images/arrow.svg"
+                      src="./assets/images/common-images/arrow.svg"
                       alt="course details arrow"
                     />
                     <a href="#">კურსის დეტალები</a>
@@ -252,7 +255,7 @@
                   </div>
                   <div class="course-info">
                     <img
-                      src="./assets/images/arrow.svg"
+                      src="./assets/images/common-images/arrow.svg"
                       alt="course details arrow"
                     />
                     <a href="#">კურსის დეტალები</a>
@@ -280,7 +283,7 @@
                   </div>
                   <div class="course-info">
                     <img
-                      src="./assets/images/arrow.svg"
+                      src="./assets/images/common-images/arrow.svg"
                       alt="course details arrow"
                     />
                     <a href="#">კურსის დეტალები</a>
@@ -307,7 +310,10 @@
                     </div>
                   </div>
                   <div class="course-info">
-                    <img src="./assets/images/arrow.svg" alt="arrow" />
+                    <img
+                      src="./assets/images/common-images/arrow.svg"
+                      alt="arrow"
+                    />
                     <a href="#">კურსის დეტალები</a>
                   </div>
                 </div>
@@ -334,7 +340,7 @@
                   </div>
                   <div class="course-info">
                     <img
-                      src="./assets/images/arrow.svg"
+                      src="./assets/images/common-images/arrow.svg"
                       alt="course details arrow"
                     />
                     <a href="#">კურსის დეტალები</a>
@@ -404,7 +410,7 @@
                 <h3>როგორ ხდება კურსებზე რეგისტრაცია და შერჩევა?</h3>
                 <img
                   class="question-arrow"
-                  src="./assets/images/downward-arrow.svg"
+                  src="./assets/images/common-images/downward-arrow.svg"
                 />
               </div>
               <article class="faq-answer" id="toggle-1">
@@ -466,7 +472,7 @@
                 <h3>შემიძლია თუ არა ერთზე მეტ კურსზე რეგისტრაცია?</h3>
                 <img
                   class="question-arrow"
-                  src="./assets/images/downward-arrow.svg"
+                  src="./assets/images/common-images/downward-arrow.svg"
                 />
               </div>
               <article class="faq-answer" id="toggle-2">
@@ -483,7 +489,7 @@
                 <h3>რა ღირს სწავლა პროგრამის ფარგლებში?</h3>
                 <img
                   class="question-arrow"
-                  src="./assets/images/downward-arrow.svg"
+                  src="./assets/images/common-images/downward-arrow.svg"
                 />
               </div>
               <article class="faq-answer" id="toggle-3">
@@ -502,7 +508,10 @@
       <div class="footer-terms">
         <div class="footer-terms-container">
           <div class="footer-terms-close">
-            <img src="./assets/close.svg" alt="closing button" />
+            <img
+              src="./assets/images/common-images/close.svg"
+              alt="closing button"
+            />
           </div>
           <div class="footer-terms-body">
             <div class="footer-terms-title">
@@ -798,7 +807,10 @@
         <div class="footer-container">
           <div class="logo-and-text">
             <div class="tbc-logo">
-              <img src="./assets/images/tbc-logo.png" alt="TBC Bank logo" />
+              <img
+                src="./assets/images/common-images/tbc-logo.png"
+                alt="TBC Bank logo"
+              />
             </div>
             <div class="contact-email link">
               <a class="contact-link" href="mailto:itacademy@tbcbank.com.ge"
@@ -823,7 +835,7 @@
               <a href="https://www.facebook.com/tbcbank/">
                 <img
                   class="facebook-logo"
-                  src="./assets/images/facebook-logo.png"
+                  src="./assets/images/common-images/facebook-logo.png"
                   alt="Facebook logo"
                 />
               </a>
@@ -831,7 +843,7 @@
                 href="https://www.youtube.com/channel/UCGk9R2LV2ywOL80r8Xc6xtQ"
               >
                 <img
-                  src="./assets/images/youtube-logo.png"
+                  src="./assets/images/common-images/youtube-logo.png"
                   alt="YouTube logo"
                 />
               </a>
@@ -846,6 +858,6 @@
       </div>
     </footer>
 
-    <script type="module" src="scripts/script.js"></script>
+    <script type="module" src="scripts/main.js"></script>
   </body>
 </html>
